fixing website but only on mobile

--- a/HLCStyles.css
+++ b/HLCStyles.css
@@ -1,21 +1,33 @@
+:root {
+    --backBubble: rgba(9, 110, 45, 0.587);
+    --frontBubble: rgba(209, 218, 209, 0.724);
+    --altBackBubble: rgb(221, 238, 229);
+}
+
+
 body {
     margin: 0 auto;
     padding: 0;
-    background-color: rgb(241, 219, 190);
+    background-color: mintcream;
     width: 96%;
     overflow-x: hidden;
 }
 article {
     display: grid;
-    grid-template-rows: 100px 70px auto;
+    grid-template-rows: 80px auto;
     padding: 0 0 20px 0;
     margin-top: 0;
     align-items: normal;
     justify-content: center;
     text-align: center;
     grid-template-columns: 1fr;
+    gap: 20px;
+}
+hr {
+    width: 80%;
 }
 #navBar {
+    display: none;
     margin: 0;
     padding: 15px 0 10px 0;
     background-color: rgb(241, 219, 190);
@@ -26,7 +38,11 @@ article {
     margin: 0;
 }
 header {
-    background-color: rgb(223, 195, 159);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: start;
+    background-color: var(--frontBubble);
     text-align: left;
     height: 100%;
     z-index: 10;
@@ -36,7 +52,8 @@ header {
     margin: 10px 0;
 }
 header h1 {
-    padding: 20px;
+    padding: 0;
+    margin: 0 0 0 10%;
     font-size: 2.5em;
 }
 @media screen and (max-width: 600px) {
@@ -51,17 +68,19 @@ header h1 {
 @media screen and (max-width: 400px) {
     header h1 {
         font-size: 1.6em;
-        padding: 40px 10px;
+        padding: 0;
     }
     #navBar {
         padding: 10px 0 5px 0;
     }
 }
 main {
+    display: flex;
+    flex-direction: column;
     box-shadow: 0 1px 10px 0 rgb(10, 10, 10);
     border: solid 1px rgba(14, 12, 12, 0.76);
     border-radius: 10px;
-    background-color: rgba(245, 201, 144, 0.767);
+    background-color: var(--backBubble);
     padding: 0 1% 0 1%;
 }
 
@@ -80,7 +99,7 @@ p {
     border: solid 2px black;
     border-radius: 8px;
     margin: 10px 0;
-    background-color: rgba(248, 221, 187, 0.767);
+    background-color: var(--frontBubble);
 }
 #aboutContainer h2 {
     font-size: 2em;
@@ -90,15 +109,15 @@ p {
 #curriculumContainer {
     border: solid 2px black;
     border-radius: 8px;
-    display: none;
+    display: inline-block;
     margin: 10px 0;
     justify-content: center;
     align-items: center;
-    background-color: rgba(248, 221, 187, 0.767);
+    background-color: var(--frontBubble);
 }
 #curriculumCardContainer {
     justify-self: center;
-    display: grid;
+    display: none; /*grid*/
     align-items: center;
     justify-content: center;
 }
@@ -113,6 +132,16 @@ p {
     max-width: 250px;
     min-width: 150px;
     padding: 0 2%;
+}
+
+#operatingHoursContainer {
+    background-color: var(--altBackBubble);
+    border: solid 2px silver;
+    border-radius: 8px;
+    width: 90%;
+    margin: 12px auto;
+    padding: 2px 0 4px 0;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
 #financialsContainer {
@@ -150,7 +179,7 @@ button {
 }
 @media screen and (max-width: 400px) {
     article {
-        grid-template-rows: 100px 120px auto;
+        grid-template-rows: 80px auto;
     }
     button {
         text-align: left;
